--- a/src/components/SocialMediaButton.astro
+++ b/src/components/SocialMediaButton.astro
@@ -30,13 +30,7 @@ const {
   target="_blank"
   rel="noopener noreferrer"
 >
-  <ImageParagraph
-    src={src}
-    alt={alt}
-    width={width}
-    height={height}
-    side={side}
-  >
+  <ImageParagraph src={src} alt={alt} width={width} height={height} side={side}>
     {text}
   </ImageParagraph>
 </a>
