Added min & max width to the social links

--- a/src/components/SocialMediaButton.astro
+++ b/src/components/SocialMediaButton.astro
@@ -54,7 +54,8 @@ const {
       background 0.25s ease;
     position: relative;
     overflow: hidden;
-    width: 40%;
+    min-width: 20rem;
+    max-width: 40%;
   }
 
   .social-link::before {
