--- a/src/components/SocialMediaButton.astro
+++ b/src/components/SocialMediaButton.astro
@@ -54,8 +54,8 @@ const {
       background 0.25s ease;
     position: relative;
     overflow: hidden;
-    min-width: 20rem;
-    max-width: 40%;
+    min-width: 15rem;
+    width: 40%;
   }
 
   .social-link::before {
