Altered text in reg hurrying attendees to reg

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,8 @@ import RegisterButton from "../components/RegisterButton.astro";
         make it down further south!
       </p>
       <h2 class="dates">March 6th-9th - Holiday Inn, Portsmouth</h2>
-
+      
+      <b> Registration closes at the <u>end of Februrary</u>, register below while you still can!</b>
       <RegisterButton />
 
       <div class="highlights" aria-label="Convention highlights">
@@ -65,6 +66,7 @@ import RegisterButton from "../components/RegisterButton.astro";
     margin: 2rem 0 1rem;
     max-width: 1400px;
   }
+
   .hero-image img {
     width: 100%;
     height: auto;
