--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,8 +25,11 @@ import RegisterButton from "../components/RegisterButton.astro";
         make it down further south!
       </p>
       <h2 class="dates">March 6th-9th - Holiday Inn, Portsmouth</h2>
-      
-      <b> Registration closes at the <u>end of Februrary</u>, register below while you still can!</b>
+
+      <b>
+        Registration closes at the <u>end of Februrary</u>, register below while
+        you still can!</b
+      >
       <RegisterButton />
 
       <div class="highlights" aria-label="Convention highlights">
